--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+
 # Rust build artifacts
 /flomon_service/target/
 
@@ -22,3 +23,6 @@ Thumbs.db
 # Environment files
 .env
 .env.local
+
+# Historical ingest state
+flomon_service/historical_ingest_state.json
