--- a/flomon_service/Cargo.toml
+++ b/flomon_service/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 chrono = { version = "0.4", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+toml = "0.8"  # Configuration file parsing
 
 # Database - with chrono support for DateTime types
 postgres = { version = "0.19", features = ["with-chrono-0_4"] }
